# python-nearest-colour

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
nearest_colours/: __init__.py  x11.csv
