[tool.poetry]
name = "nearest-colour"
version = "0.1.0"
description = "Find the nearest W3C/X11 named colors to a given color"
authors = ["Pedro Asad <psa.exe@gmail.com>"]
license = "MIT"

packages = [
    {include = "nearest_colours"}
]

[tool.poetry.dependencies]
python = "^3.8"
colour = "^0.1.5"
numpy = "^1.22.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
ipython = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
